--- a/component/index.html
+++ b/component/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="-1">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-    <link rel="stylesheet" type="text/css" href="./component/css/wait-state.css">
+    <link rel="stylesheet" type="text/css" href="./css/wait-state.css">
 
     <style>
         body {
@@ -36,9 +36,9 @@
     <input type="button" id="btnReady" name="btnReady" value="Ready" />
 
 
-  <script src='./component/lib/jquery-3.1.1.min.js'></script>
-  <script src='./component/lib/velocity.min.js'></script>
-  <script src='./component/wait-state.js'></script>
+  <script src='./lib/jquery-3.1.1.min.js'></script>
+  <script src='./lib/velocity.min.js'></script>
+  <script src='./wait-state.js'></script>
 
   <script>
 
